[gd_scene load_steps=25 format=2]

[ext_resource path="res://opponents/hedgehog/Hedgehog.gd" type="Script" id=1]
[ext_resource path="res://opponents/sprites/grassland/Hedgehog  - basic.png" type="Texture" id=2]
[ext_resource path="res://Hitboxes_and_Hurtboxes/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitboxes_and_Hurtboxes/hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://opponents/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://opponents/squirrel/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://opponents/hedgehog/PlayerDetectionZone.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 34, 20 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 34, 20 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 34, 20 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 380, 62.5 )

[node name="Hedgehog" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( -4, 4 )
frames = SubResource( 5 )
animation = "Walk"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 44 )
shape = SubResource( 14 )

[node name="hitbox" parent="." instance=ExtResource( 4 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( 2, 44 )
shape = SubResource( 15 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 2, 44 )
shape = SubResource( 16 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 30

[node name="WanderController" parent="." instance=ExtResource( 6 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.301961, 0, 0.698039, 0.560784 )
position = Vector2( 4, 44 )
shape = SubResource( 17 )

[node name="RayCastInfront" type="RayCast2D" parent="."]
position = Vector2( 2, 44 )
rotation = 1.5708
scale = Vector2( 1, 1.5 )
enabled = true

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2( -43, 32 )
enabled = true

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="hitbox"]
[editable path="hurtbox"]
[editable path="PlayerDetectionZone"]
